Bug 1311369 - Fix twisty visibility of variables-view-scope in the Netmonitor with Firebug theme. r=ntim
UltraBlame original commit: 711791502f6c48165772d3ccb3e3ad0c9435d06e

--- a/devtools/client/themes/netmonitor.css
+++ b/devtools/client/themes/netmonitor.css
@@ -4302,50 +4302,6 @@ background
 )
 ;
 }
-/
-*
-Headers
-separators
-are
-toolbars
-but
-they
-have
-different
-height
-in
-Firebug
-theme
-*
-/
-.
-theme
--
-firebug
-.
-tabpanel
--
-content
-.
-variables
--
-view
--
-container
-.
-title
-.
-devtools
--
-toolbar
-{
-height
-:
-20px
-!
-important
-;
-}
 .
 theme
 -
