--- a/devtools/client/themes/widgets.css
+++ b/devtools/client/themes/widgets.css
@@ -4803,53 +4803,6 @@ width
 14em
 ;
 }
-.
-theme
--
-firebug
-.
-variables
--
-view
--
-scope
->
-.
-title
-{
-height
-:
-auto
-;
-border
-:
-none
-;
-}
-.
-theme
--
-firebug
-.
-variables
--
-view
--
-scope
->
-.
-title
->
-.
-theme
--
-twisty
-{
-display
-:
-none
-;
-}
 /
 *
 Generic
